# enjoystick-windows

./: .clang-format  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  EnjoyStick.bat  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  ci.yml  lint.yml
installer/: README.md  enjoystick.nsi
scripts/: bootstrap.ps1  build.ps1  clean.ps1  install-deps.ps1  run-tests.ps1  run.ps1
src/: main.cpp
src/app/: CMakeLists.txt
src/app/include/enjoystick/app/: Application.hpp  AutoStart.hpp  KeyboardMapper.hpp  SystemTray.hpp
src/app/res/: enjoystick.rc  enjoystick_icon_data.h  icon_placeholder.md
src/app/src/: Application.cpp  AutoStart.cpp  AutoStart.hpp  KeyboardMapper.cpp  SystemTray.cpp  enjoystick.manifest  main.cpp
src/config/: CMakeLists.txt
src/config/include/enjoystick/config/: Config.hpp  ConfigSerializer.hpp  ConfigStore.hpp
src/config/src/: Config.cpp  ConfigSerializer.cpp  ConfigStore.cpp
src/core/: CMakeLists.txt
src/core/include/enjoystick/core/: DeadzoneFilter.hpp  HapticsEngine.hpp  InputEngine.hpp  VirtualMouse.hpp
src/core/include/enjoystick/shared/: Types.hpp
src/core/src/: DeadzoneFilter.cpp  HapticsEngine_XInput.cpp  InputBackend_HID.cpp  InputBackend_HID.hpp  InputBackend_XInput.cpp  InputBackend_XInput.hpp  InputEngine.cpp
src/cursor/: CMakeLists.txt
src/cursor/include/enjoystick/cursor/: VirtualMouse.hpp
src/cursor/src/: VirtualMouse.cpp
src/input/: CMakeLists.txt
src/input/include/enjoystick/input/: GameModeDetector.hpp  KeyboardMapper.hpp
src/input/src/: GameModeDetector.cpp  KeyboardMapper.cpp
src/overlay/: CMakeLists.txt
src/overlay/include/enjoystick/overlay/: ControlsOverlay.hpp  OverlayController.hpp  OverlayWindow.hpp  Overlay_SpringAnim.hpp  RadialMenu.hpp  SettingsMenu.hpp  VirtualKeyboard.hpp  VoiceInputHUD.hpp
src/overlay/src/: ControlsOverlay.cpp  OverlayController.cpp  OverlayWindow.cpp  OverlayWindow_Impl.hpp  Overlay_Easing.hpp  Overlay_SpringAnim.hpp  Overlay_Theme.hpp  RadialMenu.cpp  SettingsMenu.cpp  VirtualKeyboard.cpp  VirtualKeyboard_patch_debounce.md  VoiceInputHUD.cpp
src/voice/: CMakeLists.txt
src/voice/include/enjoystick/voice/: VoiceInput.hpp  VoiceInputEngine.hpp
src/voice/src/: VoiceInput.cpp  VoiceInputEngine.cpp
tests/: CMakeLists.txt  test_config.cpp  test_deadzone.cpp  test_overlay.cpp  test_radial_menu.cpp  test_virtual_mouse.cpp
